# intro

./: flake.nix
rust/: Cargo.toml  blade.patch  build_minified.sh  sine.patch  synth.gui_patch  synth.patch  synth2.gui_patch  synth2.patch
rust/src/: audio.rs  gl.rs  gui_graph.rs  intro.rs  knob.rs  main.rs  synth_gui.rs
rust/src/synth/: graph.rs
rust/src/synth/graph/: add.rs  bias.rs  envelope.rs  group.rs  hp.rs  key.rs  lp.rs  out.rs  reverb.rs  saw_osc.rs  scale.rs  sequencer.rs  sine_osc.rs  subgraph.rs  voice_key.rs
