[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# [[bin]]
# name = "synth_gui"
# path = "src/synth_gui.rs"
[[bin]]
name = "intro"
path = "src/intro.rs"

# [lib]
# crate-type = ["cdylib"]
# name = "intro"
# path = "src/intro.rs"


[profile.release]
opt-level = "z"
# strip = true
lto = true
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.52.0"
pipewire = { path="./pipewire-rs/pipewire" }
# const_format = "*"
# itertools = "*"
# timer = "0.2.0"
# eframe = "0.21.0"
# egui_node_graph = { path="./egui_node_graph/egui_node_graph" }
# anyhow = "1.0"
# sdl2 = "0.35.2"
# slotmap = { version = "1.0" }
# rand = "*"
# rayon="*"
# lolmacros = { path="./lolmacros" }
# eframe = { path = "../../crates/eframe", features = [
#     "__screenshot", # __screenshot is so we can dump a ascreenshot using EFRAME_SCREENSHOT_TO
# ] }
# tracing = "*"
# tracing-subscriber = "0.3"
#serde = { version = "1.0", optional = true }
# serde = { version= "*", optional = true }
interp1d = "*"
# typetag = "0.2"
# serde_json = "*"
# glob = "*"
# once_cell = "1.17.1"
# serde_as = "*"
# serde_with = "*"
nix = "0.26.2"
libc = { version="0.2.147", features=[] }

[features]
default = []
serialize = []
debug = []
# default = ["persistence"]
# persistence = ["serde", "egui_node_graph/persistence", "eframe/persistence"]

