[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "synth_gui"
path = "src/synth_gui.rs"

[[bin]]
name = "intro"
path = "src/intro.rs"

[profile.release]
opt-level = "z"
# strip = true
# lto = true
# codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.52.0"
# pipewire = "0.6.0"
# pipewire = { git = "https://gitlab.freedesktop.org/fdanis/pipewire-rs", branch="spa_adding_audioinforaw_struct"}
pipewire = { path="./pipewire-rs/pipewire" }
const_format = "*"
serde_millis = "*"
itertools = "*"
ctrlc = "*"
chrono = "0.4"
timer = "0.2.0"
eframe = "0.22.0"
anyhow = "1.0"
sdl2 = "0.35.2"
slotmap = { version = "1.0", features = ["serde"]}
rand = "*"
rayon="*"
serde = { version= "*", optional = true }
interp1d = "*"
typetag = "0.2"
serde_json = "*"
glob = "*"
# once_cell = "1.17.1"
serde_as = "*"
serde_with = "*"
ron = "0.8.0"
egui_extras = "0.22.0"
symbol_table = {version="0.3.0", features=["global", "serde"]}

[features]
default = ["persistence"]
persistence = ["serde", "eframe/persistence"]

